Fix teaser title spacing

--- a/assets/scss/page/_home.scss
+++ b/assets/scss/page/_home.scss
@@ -21,6 +21,10 @@
   grid-column: span 4;
 }
 
+.new-teaser-aside-title {
+  margin: 0 0 8px;
+}
+
 .new-teaser-recommendations {
   grid-column: span 8;
 }
